--- a/spring-security/spring-security/src/main/resources/application.properties
+++ b/spring-security/spring-security/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Person
+spring.datasource.url=jdbc:postgresql://santhosh-basic.c4ses0ndbyqf.us-east-1.rds.amazonaws.com/allinoneDB
 spring.datasource.username=postgres
-spring.datasource.password=0258
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
