changing deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,5 +27,9 @@ jobs:
           mvn package
 
     - name: Deploy to EC2
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.PRIV}}
       run: |
         ssh ec2-user@54.175.99.206 "sudo /home/ec2-user/script.sh"
+
+
