--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,5 +29,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file ./spring-security/spring-security/pom.xml
+    - name: Execute Jar file
+      run: sudo kill -9 `sudo lsof -t -i:8080` & sudo java -jar /home/ec2-user/actions-runner/_work/FoodDeliveryServer/FoodDeliveryServer/spring-security/spring-security/target/spring-security-0.0.1-SNAPSHOT.jar
+
 
 
